--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,8 @@
             html, body, canvas {
                 margin: 0px;
                 padding: 0px;
-                width: 100%;
-                height: 100%;
+                width: 560px;
+                height: 640px;
                 overflow: hidden;
             }
         </style>
